[gd_scene load_steps=4 format=3]
[ext_resource path="res://themes/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/StatusPanel.gd" type="Script" id=2]
[ext_resource path="res://scripts/QuickBar.gd" type="Script" id=3]

[node name="StatusPanel" type="Control"]
theme = ExtResource("1")
script = ExtResource("2")
layout_mode = 3

[node name="Header" type="HBoxContainer" parent="."]
offset_top = 0.0
offset_right = 1080.0
offset_bottom = 96.0
alignment = 1

[node name="BtnBack" type="Button" parent="Header"]
custom_minimum_size = Vector2(88,48)
text = ""

[node name="LblTitle" type="Label" parent="Header"]
size_flags_horizontal = 3
text = "StatusPanel"

[node name="BtnSettings" type="Button" parent="Header"]
custom_minimum_size = Vector2(88,48)
text = ""


[node name="BarEnergy" type="ProgressBar" parent="."]
offset_top = 120.0
offset_right = 1080.0
offset_bottom = 160.0
value = 80.0
[node name="LblCondition" type="Label" parent="."]
offset_top = 170.0
offset_right = 1080.0
offset_bottom = 210.0
text = "Cond: GOOD"
[node name="BarFatigue" type="ProgressBar" parent="."]
offset_top = 220.0
offset_right = 1080.0
offset_bottom = 260.0
value = 34.0
[node name="LblInjury" type="Label" parent="."]
offset_top = 270.0
offset_right = 1080.0
offset_bottom = 310.0
text = "No injury"
[node name="ListTreatments" type="ItemList" parent="."]
offset_top = 320.0
offset_right = 1080.0
offset_bottom = 840.0


[node name="QuickBar" type="Control" parent="."]
script = ExtResource("3")
anchors_preset = 12
